--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,16 @@
+# Jekyll Configuration File
 title: Sport of Life
 description: A coaching philosophy, creative work in progress, a personal development guide, written as a we story and a gamification of life, to inspire, for and by Mitch Skolnekovich.
 baseurl: "" # Leave blank for the root directory
 url: "https://mjskolne.github.io/SportOfLife" # Replace with your GitHub Pages URL
 
-theme: minima # You can change this to a supported theme
+# https://pages.github.com/themes/
+# GFM is GitHub Flavored Markdown
+theme: modernist
+
 markdown: kramdown
+  input: GFM
+  
 permalink: pretty # Makes URLs more readable
 
 # Exclude these files from being processed by Jekyll
